--- a/lipstr/lists/static/less/header.less
+++ b/lipstr/lists/static/less/header.less
@@ -106,7 +106,8 @@
             &.dropdown {
                 
                 a.dropdown-toggle {
-                    padding: 7px 10px 10px;
+                    /*padding: 7px 10px 10px;*/
+                    height: 19px;
                     
                     .caret {
                         opacity: 1;
