drag and drop on board names

--- a/lipstr/lists/static/less/header.less
+++ b/lipstr/lists/static/less/header.less
@@ -75,6 +75,14 @@
         }
         
         &.nav-pills {
+        
+            .board-drop {
+                /*background-color: rgb(41, 204, 0);
+                color: white;
+                text-shadow: initial;*/
+                
+            }
+                
             li.dropdown {
                 &.open, &:hover {
                     .dropdown-toggle {
