--- a/lipstr/lists/static/less/login.less
+++ b/lipstr/lists/static/less/login.less
@@ -156,7 +156,7 @@
     background-position: 50% 22px;
     padding-top: 180px;
     
-    #signup {
+    .blue-content {
         padding-top: 23px;
         padding-bottom: 0;
         border-top: 2px solid rgba(91, 163, 188, 0.41);
