--- a/lipstr/lists/templates/signup.html
+++ b/lipstr/lists/templates/signup.html
@@ -12,7 +12,7 @@
 
 {% block login %}
 <section id="login" class="signup-page">  
-    <form id="signup">{% csrf_token %}
+    <form id="signup" class="blue-content">{% csrf_token %}
         
         <h2>A new user? Awesome! <br>All you need is an email address and a password to get started</h2>
         
