fixed bootstrap images link in less

--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -309,7 +309,7 @@ li.list {
         height: 14px;
         content: " ";
         display: none;
-        background-image: url("http://remi-virtualbox:5000/static/bootstrap/less/../img/glyphicons-halflings.png");
+        background-image: url("../img/glyphicons-halflings.png");
         background-position: -264px -24px;
         
         &.board-over {
