finished password reset

--- a/lipstr/lists/templates/fragments/list.html
+++ b/lipstr/lists/templates/fragments/list.html
@@ -22,6 +22,7 @@
                         <div class="li-button"> </div>
                         <ul class="li-menu-dropdown">
                             <li><a href="" data-bind="click: function() { $data.editList(); }">edit list</a></li>
+                            <li><a href="" data-bind="click: function() { $data.cleanItems(); }">clean list</a></li>
                             <li><a href="" data-bind="click: function() { $root.remList($data); }">remove list</a></li>
                         </ul>
                     </div>
