--- a/lipstr/lists/templates/lost_password.html
+++ b/lipstr/lists/templates/lost_password.html
@@ -21,7 +21,7 @@
         </div>
     
         <div id="submit-wrapper" style="margin-left: 190px">
-            <input type="submit" value="Reset my password" /></p>
+            <input type="submit" value="Reset my password" />
         </div>
         
         <div id="errors">{{ form.email.errors }}</div>
