--- a/lipstr/lists/templates/login.html
+++ b/lipstr/lists/templates/login.html
@@ -22,7 +22,7 @@
             <input type="password" name="password" placeholder="Password">
         </div>
         <input type="submit" value="Login">
-        <p id="forgot-your-password">forgot your password?</p>
+        <p id="forgot-your-password"><a href="/lost-password">forgot your password?</a></p>
         <div style="clear: both"></div>
     </form>
     
